src/test/resources/fixtures/parser/solidity_official_tests/shouldSucceed/location_specifiers_for_locals.sol
contract Foo {
  function f() {
    uint[] storage x;
    uint[] memory y;
  }
}