src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/locationSpecifiersWithVar.sol
contract Foo {
  function f() { var memory x; }